# CompanyNumberCalculator

./: .gitignore  .gitmodules  LICENSE
Cpp/: .gitignore  CMakeLists.txt  Calculator.hpp  main.cpp  test.cpp
JavaScript/: main.js  package.json
JavaScript/modules/: ArgCheck.js  CalcMain.js  CheckDigit.js
JavaScript/tests/: ArgCheck.js
NodeJS/: .gitignore  package-lock.json
NodeJS/tests/: ArgCheck.js  CalcMain.js  CheckDigit.js
